# syncpass

./: .gitignore  CMakeLists.txt  compile.sh  configure.sh
src/: main.cpp
